--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "openai": "^3.2.1",
     "react": "^18.2.0",
