--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
+    "aws-amplify": "^5.0.25",
+    "aws-amplify-react": "^5.1.43",
     "aws-sdk": "^2.1353.0",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
