--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify-react": "^5.1.43",
     "aws-sdk": "^2.1353.0",
     "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "openai": "^3.2.1",
