--- a/amplify/backend/function/thirdpartyhard/src/package.json
+++ b/amplify/backend/function/thirdpartyhard/src/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "aws-serverless-express": "^3.3.5",
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "axios": "^0.26.1",
     "aws-sdk": "^2.1039.0",
+    "aws-serverless-express": "^3.3.5",
+    "axios": "^0.26.1",
+    "body-parser": "^1.17.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
